# injection

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  test.py
notebooks/: fast_depends.ipynb
src/injection/: binder.py  container.py  inject.py  injector.py  main.py  provider.py  providers.py
src/injection/_config/: schema.py
src/injection/app/: containers.py  endpoints.py  models.py
src/injection/app/database/: postgres.py  redis.py
src/injection/config/: schema.py
tests/unit/test_injection/: test_binder.py  test_inject.py  test_injection.py  test_provider.py  test_providers.py
