[build-system]
requires = [
    "poetry-core"
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "injection"
version = "0.0.1"
description = "Dependency injection library for Python"
readme = "README.md"
authors = [
    "Alexander Lazarev <alexandderlazarev0@gmail.com>"
]
packages = [
    {include = "injection", from="src"}
]
[tool.poetry.scripts]
injection = "injection.main:main"
[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = ">=2.7.3"
pydantic-settings = ">=2.3.0"
pyyaml = ">=6.0.1"
ruff = "^0.4.7"
